Fix overflow

--- a/style/basic.css
+++ b/style/basic.css
@@ -1,9 +1,8 @@
 body {
-    width: 99%;
     height: 100%;
+    overflow-y: hidden;
     
-    font-family: Helvetica;
-    
+    font-family: Helvetica;  
     background-color: #e8f1ef;
 }
 
